Fix workspace spacing

--- a/src/app/tabs.scss
+++ b/src/app/tabs.scss
@@ -114,6 +114,9 @@ body:is(.tab-floating, .tab-floating-center):not(.is-phone) .workspace .mod-root
     padding-inline-end: 8px;
     margin-bottom: 0;
   }
+  .workspace-tab-header-new-tab {
+    margin-left: 4px;
+  }
 }
 body:is(.tab-floating, .tab-floating-center).is-tablet {
   --header-height: 60px !important;
